# cs503-compositional-diffusion

./: .gitignore  README.md  benchmark.sh  hyperparameters.sh  inference.sh  pyproject.toml
bash/: _run_num5.sh  _run_smc_only.sh  _run_smc_v2.sh  _sweep_all.sh  _sweep_gpu0.sh  _sweep_gpu1.sh  _sweep_gpu2.sh  _sweep_gpu3.sh  debug.sh  diffcollage_edm_fixed_end.sh  example.sh  interactive_job.sh  run_all.sh  run_text_sweep.sh  test_diffcollage_edm.sh
diff_collage/: __init__.py  avg_long.py  base_worker.py  condind_long_class_cfg_factors.py  condind_long_class_cfg_vars.py  condind_long_fixed_end.py  condind_long_fixed_end_ctrl.py  utils.py
proposal_methods/: __init__.py  requirements.txt
proposal_methods/proposal_methods/: README_Proposal.md  README_RESULTS.md  __init__.py  common.py  evaluate_sd_bridge.py  evaluate_text_bridge.py  evaluate_three_methods.py  generate_method.py  methodA_sd_bridge.py  requirements.txt  sd_bridge.py  smc_worker.py  text_workers.py  workers.py
scripts/: benchmark.py  decoupling_gen_consensus.py  diffcollage_class_cond.py  diffcollage_edm_fixed_end.py  diffcollage_edm_fixed_end_ctrl.py  diffcollage_edm_fixed_end_gs.py  download_imagenet_landscapes.py  hyperparameters.py  inference.py  utils.py
src/customguidance/: __init__.py  data_utils.py  error.py
src/customguidance/core/: __init__.py  (+3 more)
toy_datasets/acg/: __init__.py
toy_datasets/notebooks/: 1_conditional_generation_cfg.ipynb  2_composable_diffusion.ipynb  4_factor_decomposition_no_cond_ind.ipynb  5_toy_euler_ctrl.ipynb  6_toy_heun_ctrl.ipynb  7_toy_euler_factor_ctrl.ipynb
(+49 files in other folders)
