[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "customguidance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "diffusers",
    "clean-fid",
    "torch_fidelity",
    "torchmetrics[multimodal]",
    "transformers",
    "tqdm",
    "pandas",
    "numpy",
    "matplotlib",
    "accelerate",
]

[tool.setuptools.packages.find]
where = ["src"]